force-app/main/default/objects/Opportunity/fields/Account_At_Risk_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Account_At_Risk_Revenue__c</fullName>
    <formula>Account.At_Risk_Revenue_PY_FY_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account At Risk Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>