force-app/main/default/objects/Opportunity/fields/Account_Name_Local__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Local__c</fullName>
    <description>Show the local Account name - See case 02791488</description>
    <formula>Account.NameLocal</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name (Local)</label>
    <type>Text</type>
</CustomField>