force-app/main/default/objects/Opportunity/fields/Account_Setup__c.field-meta.xml
<CustomField>
    <fullName>Account_Setup__c</fullName>
    <description>36950 : Booking Verification: (India) Hide Account Setup link until Booking Verification = Pass - PLNI0018180</description>
    <formula>IF(
IF(QTB_Billing_Country_Name__c =&apos;India&apos; &amp;&amp; (Amount / CURRENCYRATE(TEXT(CurrencyIsoCode))) &gt;= 5000,
/* If India: Must be Stage 5/6 AND Booking Verification must be Pass */
AND(
OR(
ISPICKVAL(StageName,&apos;5 - Signed/PO in&apos;),
ISPICKVAL(StageName,&apos;6 - Setup&apos;)),
ISPICKVAL(Deal_Validation__c,&apos;Pass&apos;)
),
/* For all other countries: Just needs to be Stage 5/6 */
OR(
ISPICKVAL(StageName,&apos;5 - Signed/PO in&apos;),
ISPICKVAL(StageName,&apos;6 - Setup&apos;))
),
HYPERLINK(&quot;/apex/IME_CreateCase_Lightning?oppId=&quot;+ Id+&quot;&amp;Type=AccountSetup&quot;, &quot;Account Setup&quot;),
&apos;&apos;
)</formula>
    <label>Account Setup</label>
    <type>Text</type>
</CustomField>