force-app/main/default/objects/Opportunity/fields/ACV_Oppty_Number__c.field-meta.xml
<CustomField>
    <fullName>ACV_Oppty_Number__c</fullName>
    <formula>Amount / CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV Oppty Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>