force-app/main/default/objects/Opportunity/fields/Add_On__c.field-meta.xml
<CustomField>
    <fullName>Add_On__c</fullName>
    <description>This field is a flag for opportunities that require an additional layer of attention from stakeholders</description>
    <label>Add-On</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
            <value>
                <fullName>Custom report / dashboard</fullName>
            </value>
            <value>
                <fullName>Customer System Integration</fullName>
            </value>
            <value>
                <fullName>Workflow,Custom report / dashboard</fullName>
            </value>
            <value>
                <fullName>Workflow,Customer System Integration</fullName>
            </value>
            <value>
                <fullName>Custom report / dashboard,Customer System Integration</fullName>
            </value>
            <value>
                <fullName>Workflow,Custom report / dashboard,Customer System Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>