force-app/main/default/objects/Opportunity/fields/Additional_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Additional_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the Additional Sales Rep from Lead.</description>
    <label>Additional Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities8</relationshipName>
    <type>Lookup</type>
</CustomField>