force-app/main/default/objects/Opportunity/fields/ALM_Band__c.field-meta.xml
<CustomField>
    <fullName>ALM_Band__c</fullName>
    <description>#21267: Determines the band based on Amount generated for ALM business unit</description>
    <label>ALM Band</label>
    <length>20</length>
    <type>Text</type>
</CustomField>