force-app/main/default/objects/Opportunity/fields/ALM_Indirect__c.field-meta.xml
<CustomField>
    <fullName>ALM_Indirect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether the opportunity is an ALM indirect/channel/sell-through opportunity.</description>
    <label>ALM Indirect</label>
    <type>Checkbox</type>
</CustomField>