force-app/main/default/objects/Opportunity/fields/ALM_of_Total__c.field-meta.xml
<CustomField>
    <fullName>ALM_of_Total__c</fullName>
    <label>ALM % of Total</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>