force-app/main/default/objects/Opportunity/fields/ALM_Solutions_Development_Executive__c.field-meta.xml
<CustomField>
    <fullName>ALM_Solutions_Development_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ALM Solutions Development Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesjF1F</relationshipName>
    <type>Lookup</type>
</CustomField>