force-app/main/default/objects/Opportunity/fields/ALM_SVP_In_My_Number__c.field-meta.xml
<CustomField>
    <fullName>ALM_SVP_In_My_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clari - Used for reporting</description>
    <label>ALM SVP - In My Number</label>
    <type>Checkbox</type>
</CustomField>