force-app/main/default/objects/Opportunity/fields/Analyst_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Follow_Up_Date__c</fullName>
    <description>Date to be used for Book to Bill Analyst to use a filter for following up on Actual Billings for an opportunity</description>
    <label>Analyst Follow Up Date</label>
    <type>Date</type>
</CustomField>