force-app/main/default/objects/Opportunity/fields/Authority_Contact__c.field-meta.xml
<CustomField>
    <fullName>Authority_Contact__c</fullName>
    <label>Authority Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>