force-app/main/default/objects/Opportunity/fields/B2B_Analyst__c.field-meta.xml
<CustomField>
    <fullName>B2B_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>35892 : Who is the B2B Analyst working this Deal</description>
    <label>B2B Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitieseZv4</relationshipName>
    <type>Lookup</type>
</CustomField>