force-app/main/default/objects/Opportunity/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.QTB_Account_Record_Type__c</field>
            <operation>equals</operation>
            <value>Billing Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Related to Billing Account</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>