force-app/main/default/objects/Opportunity/fields/Billing_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_ID__c</fullName>
    <description>Used by Implementation Team - To capture Account Ids tied to billings for this specific opportunity</description>
    <label>Billing Account ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>