force-app/main/default/objects/Opportunity/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Country</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>IM_Country__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>IM_Country__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>