force-app/main/default/objects/Opportunity/fields/Booking_Verification_Validation__c.field-meta.xml
<CustomField>
    <fullName>Booking_Verification_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#31292: This checkbox is dynamically set by record-triggered flow to indicate whether BV validation should be enforced based on Opp Billing country and TAA. Used in VR to restrict stage transition when BV requirements are not met.</description>
    <label>Booking Verification Validation</label>
    <type>Checkbox</type>
</CustomField>