force-app/main/default/objects/Opportunity/fields/Bookings_Closeness__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Closeness__c</fullName>
    <description>#26453: If Opportunity is Closed Won and Close Date is in Past 2 Years then Stores True else stores False</description>
    <formula>IF(
AND(NOT(ISBLANK(CloseDate)),IsWon,IsClosed), 
IF((Today()-CloseDate)/365&lt;=2,True,False),null)</formula>
    <label>Bookings Closeness</label>
    <type>Checkbox</type>
</CustomField>