force-app/main/default/objects/Opportunity/fields/Budget_Validated__c.field-meta.xml
<CustomField>
    <fullName>Budget_Validated__c</fullName>
    <description>Indicates whether the customer has confirmed that budget exists and is available to support the proposed solution.</description>
    <inlineHelpText>Select Yes once the customer&apos;s budget has been confirmed for this opportunity.</inlineHelpText>
    <label>Budget Validated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>