force-app/main/default/objects/Opportunity/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <description>Bundle name associated to Opportunity</description>
    <label>Bundle</label>
    <length>200</length>
    <type>Text</type>
</CustomField>