force-app/main/default/objects/Opportunity/fields/Business_Case_Justification__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_Justification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Case Justification</label>
    <type>Checkbox</type>
</CustomField>