force-app/main/default/objects/Opportunity/fields/Business_Case_Justified__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_Justified__c</fullName>
    <label>Business Case Justified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GTM_Boolean</valueSetName>
    </valueSet>
</CustomField>