force-app/main/default/objects/Opportunity/fields/Business_Problem_Evidenced__c.field-meta.xml
<CustomField>
    <fullName>Business_Problem_Evidenced__c</fullName>
    <label>Business Problem Evidenced</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enable New Capabilities or Strategic Initiatives</fullName>
            </value>
            <value>
                <fullName>Enhance Integration or System Connectivity</fullName>
            </value>
            <value>
                <fullName>Improve Customer Experience or Satisfaction</fullName>
            </value>
            <value>
                <fullName>Improve Efficiency or Reduce Manual Work</fullName>
            </value>
            <value>
                <fullName>Improve Visibility, Reporting, or Decision-Making</fullName>
            </value>
            <value>
                <fullName>Increase Revenue or Conversion</fullName>
            </value>
            <value>
                <fullName>Modernize Technology or Replace Legacy Systems</fullName>
            </value>
            <value>
                <fullName>No Clear Problem Identified Yet</fullName>
            </value>
            <value>
                <fullName>Reduce Costs or Operational Waste</fullName>
            </value>
            <value>
                <fullName>Strengthen Compliance, Security, or Risk Management.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>