force-app/main/default/objects/Opportunity/fields/Business_Unit_2__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_2__c</fullName>
    <label>Business Unit 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>RIM</fullName>
            </value>
            <value>
                <fullName>ALM</fullName>
            </value>
            <value>
                <fullName>Data Center</fullName>
            </value>
            <value>
                <fullName>W&amp;L</fullName>
            </value>
            <value>
                <fullName>Crozier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>