force-app/main/default/objects/Opportunity/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Primary Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>RIM</fullName>
            </value>
            <value>
                <fullName>ALM</fullName>
            </value>
            <value>
                <fullName>Crozier</fullName>
                <isActive>false</isActive>
                <label>Crozier</label>
            </value>
            <value>
                <fullName>Data Center</fullName>
                <isActive>false</isActive>
                <label>Data Center</label>
            </value>
            <value>
                <fullName>W&amp;L</fullName>
                <isActive>false</isActive>
                <label>W&amp;L</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>