force-app/main/default/objects/Opportunity/fields/Buying_Commitee_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Buying_Commitee_Confirmed__c</fullName>
    <label>Buying Commitee Confirmed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GTM_Boolean</valueSetName>
    </valueSet>
</CustomField>