force-app/main/default/objects/Opportunity/fields/BV_Stage_Gate_Bypass__c.field-meta.xml
<CustomField>
    <fullName>BV_Stage_Gate_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BV Stage Gate Bypass</label>
    <type>Checkbox</type>
</CustomField>