force-app/main/default/objects/Opportunity/fields/Bypass_Flows_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Flows_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#26229 - This field is used to bypass the triggering of certain flows in order to increase the test class code coverage and minimize the 101 error.</description>
    <label>Bypass Flows Trigger</label>
    <type>Checkbox</type>
</CustomField>