force-app/main/default/objects/Opportunity/fields/Bypass_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Since the Opportunity is now locked for Sales Profiles at Stages 6 and 7, sales still needs to update field “Up-Sell Detail” in stages 6 and 7 to log billing details. This allows them to communicate to Commissions via this field. “Up-sell Detail” Chatter Action allows bypassing the validation and is able to only update this field.[Case# 02497355].</description>
    <label>Bypass Validation</label>
    <type>Checkbox</type>
</CustomField>