force-app/main/default/objects/Opportunity/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>Owner.City</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>