force-app/main/default/objects/Opportunity/fields/CkW__c.field-meta.xml
<CustomField>
    <fullName>CkW__c</fullName>
    <inlineHelpText>Critical Kilowatt - Value used for Data Center Opportunities</inlineHelpText>
    <label>CkW</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>