force-app/main/default/objects/Opportunity/fields/Cloud_Provider__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Provider__c</fullName>
    <label>Cloud Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AWS-Inbound</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
                <label>AWS-Outbound</label>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>