force-app/main/default/objects/Opportunity/fields/Commissionable_Window__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Window__c</fullName>
    <defaultValue>6</defaultValue>
    <description>Number of months that an opportunity is commissionable, set by Paulette Wilson.</description>
    <inlineHelpText>Number of months this sale is eligible for commission.</inlineHelpText>
    <label>Commissionable Window</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>