force-app/main/default/objects/Opportunity/fields/Company_Registered_Address2__c.field-meta.xml
<CustomField>
    <fullName>Company_Registered_Address2__c</fullName>
    <label>Company Registered Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>