force-app/main/default/objects/Opportunity/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <inlineHelpText>Select the contract you would like to include in the DocuSign proposal based on the Service Type you’ve selected</inlineHelpText>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A5000</fullName>
            </value>
            <value>
                <fullName>A7000</fullName>
            </value>
            <value>
                <fullName>Business Associate Agreement</fullName>
            </value>
            <value>
                <fullName>Canada 2 Free Months Promo</fullName>
            </value>
            <value>
                <fullName>Canada 2 Free Months Promo French</fullName>
            </value>
            <value>
                <fullName>Canada Affiliate (French)</fullName>
            </value>
            <value>
                <fullName>Canada Affiliate DM</fullName>
            </value>
            <value>
                <fullName>Canada Affiliate English</fullName>
            </value>
            <value>
                <fullName>Canada Media Vaulting</fullName>
            </value>
            <value>
                <fullName>Canada Purge Promo</fullName>
            </value>
            <value>
                <fullName>Canada Shredding</fullName>
            </value>
            <value>
                <fullName>Canada Shredding French</fullName>
            </value>
            <value>
                <fullName>Canada Storage</fullName>
            </value>
            <value>
                <fullName>Canada Storage French</fullName>
            </value>
            <value>
                <fullName>CAN Basic 100</fullName>
            </value>
            <value>
                <fullName>CAN Easy Program</fullName>
            </value>
            <value>
                <fullName>CAN Easy Program French</fullName>
            </value>
            <value>
                <fullName>CAN Easy Program RM/Shred</fullName>
            </value>
            <value>
                <fullName>CAN Easy Program RM/Shred French</fullName>
            </value>
            <value>
                <fullName>CAN Store Safe Access</fullName>
            </value>
            <value>
                <fullName>CAN Store Safe Access with Shred</fullName>
            </value>
            <value>
                <fullName>CAN Store Safe Basic</fullName>
            </value>
            <value>
                <fullName>CAN Store Safe Shred</fullName>
            </value>
            <value>
                <fullName>CAN Value Package</fullName>
            </value>
            <value>
                <fullName>CAN Value Package French</fullName>
            </value>
            <value>
                <fullName>Franchise CAN Value</fullName>
            </value>
            <value>
                <fullName>Franchise French Value</fullName>
            </value>
            <value>
                <fullName>Franchise US Value</fullName>
            </value>
            <value>
                <fullName>GRCS Agreement</fullName>
            </value>
            <value>
                <fullName>Secure IT Asset Disposition (SITAD)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>