force-app/main/default/objects/Opportunity/fields/Contracting_Country__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Country__c</fullName>
    <label>Contracting Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>