force-app/main/default/objects/Opportunity/fields/Create_Pkg_for_eSignature_lightning__c.field-meta.xml
<CustomField>
    <fullName>Create_Pkg_for_eSignature_lightning__c</fullName>
    <description>Create Pkg for eSignature for Lightning users - Case# 09154470</description>
    <formula>(HYPERLINK(&quot;/apex/DL_VF_Working_On_lightning?id=&quot;&amp;Id, &quot;Create Pkg for eSignature&quot;, &quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Pkg for eSignature</label>
    <type>Text</type>
</CustomField>