force-app/main/default/objects/Opportunity/fields/Create_Standard_Contract__c.field-meta.xml
<CustomField>
    <fullName>Create_Standard_Contract__c</fullName>
    <formula>HYPERLINK(&quot;/apex/createNewContract?id=&quot;+ Id, &quot;Create Standard Contract&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Standard Contract</label>
    <type>Text</type>
</CustomField>