force-app/main/default/objects/Opportunity/fields/Cubic_Feet__c.field-meta.xml
<CustomField>
    <fullName>Cubic_Feet__c</fullName>
    <description>Sums the Quantity of all Products with a Unit of Measure of Cubic Foot.  Used in IMLA reporting.</description>
    <label>CuFt</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Unit_of_Measure__c</field>
        <operation>equals</operation>
        <value>CuFt</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>