force-app/main/default/objects/Opportunity/fields/Current_Premium_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Premium_Revenue__c</fullName>
    <formula>CurrentServicePremiumRevenue__c +  CurrentStoragePremiumRevenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Premium Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>