force-app/main/default/objects/Opportunity/fields/Current_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Revenue__c</fullName>
    <label>Current Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>