force-app/main/default/objects/Opportunity/fields/CurrentEffLPPDiscount__c.field-meta.xml
<CustomField>
    <fullName>CurrentEffLPPDiscount__c</fullName>
    <formula>IF 
( 
(TotalStdandPremRevatListPrice__c - Current_Premium_Revenue__c) = 0, 
0, 
1 - ( CurrentTotalStdandPremRevenue__c / ( TotalStdandPremRevatListPrice__c - Current_Premium_Revenue__c ) ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Effective LPP Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>