force-app/main/default/objects/Opportunity/fields/CurrentEffLPPStorageDiscount__c.field-meta.xml
<CustomField>
    <fullName>CurrentEffLPPStorageDiscount__c</fullName>
    <formula>IF 
( 
(StorageStdandPremRevatListPrice__c - CurrentStoragePremiumRevenue__c) = 0, 
0, 
1 - ( (CurrentStoragePremiumRevenue__c + CurrentStorageStandardRevenue__c) / (StorageStdandPremRevatListPrice__c - CurrentStoragePremiumRevenue__c) ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Effective LPP Storage Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>