force-app/main/default/objects/Opportunity/fields/CurrentServicePremiumRevenue__c.field-meta.xml
<CustomField>
    <fullName>CurrentServicePremiumRevenue__c</fullName>
    <label>Current Service Premium Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>