force-app/main/default/objects/Opportunity/fields/CurrentStorageStandardRevenue__c.field-meta.xml
<CustomField>
    <fullName>CurrentStorageStandardRevenue__c</fullName>
    <label>Current Storage Standard Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>