force-app/main/default/objects/Opportunity/fields/Custom_Demo_POC__c.field-meta.xml
<CustomField>
    <fullName>Custom_Demo_POC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a custom demonstration or proof of concept (POC) is required to support the sales opportunity.</description>
    <inlineHelpText>Select whether a custom demonstration or proof of concept is required as part of the sales process.</inlineHelpText>
    <label>Custom Demo (POC)</label>
    <type>Checkbox</type>
</CustomField>