force-app/main/default/objects/Opportunity/fields/Customer_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Number__c</fullName>
    <inlineHelpText>The customer account ID as setup in the billing system. SKP, ARCVMS etc</inlineHelpText>
    <label>Customer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>