force-app/main/default/objects/Opportunity/fields/Customer_Outcome_Predefined__c.field-meta.xml
<CustomField>
    <fullName>Customer_Outcome_Predefined__c</fullName>
    <description>Indicates whether the desired business outcomes and success measures have been defined with the customer.</description>
    <inlineHelpText>Select Yes once the expected business outcomes have been agreed upon with the customer.</inlineHelpText>
    <label>Customer Outcome Predefined</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>