force-app/main/default/objects/Opportunity/fields/Customer_Verifier_10__c.field-meta.xml
<CustomField>
    <fullName>Customer_Verifier_10__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>V13. Customer is openly negotiating terms and conditions.</inlineHelpText>
    <label>Customer Verifier 14</label>
    <type>Checkbox</type>
</CustomField>