force-app/main/default/objects/Opportunity/fields/Customer_Verifier_11__c.field-meta.xml
<CustomField>
    <fullName>Customer_Verifier_11__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>V14. Customer accepted and signed the final contract.</inlineHelpText>
    <label>Customer Verifier 15</label>
    <type>Checkbox</type>
</CustomField>